更新（ステップ２）

--- a/app/templates/app/post_detail.html
+++ b/app/templates/app/post_detail.html
@@ -6,12 +6,16 @@
 <hr>
 <p>{{ post_data.created }} by {{ post_data.author }}</p>
 <hr>
+{% if post_data.image %}
+    <img class="rounded detail-img" src="{{ post_data.image.url }}" alt="">        
+{% endif %}
+<hr>
 <p>{{ post_data.content|linebreaksbr }}</p>
 {% if user.is_authenticated %}
     <hr>
     <div class="d-flex mb-5">
-			<a class="btn btn-warning mr-2" href="{% url 'post_edit' post_data.id %}">編集する</a>
-        <a class="btn btn-danger" href="{% url 'post_delete' post_data.id %}">削除する</a>  
+        <a class="btn btn-warning mr-2" href="{% url 'post_edit' post_data.id %}">編集する</a>
+        <a class="btn btn-danger" href="{% url 'post_delete' post_data.id %}">削除する</a>    
     </div>
 {% endif %}
 
