--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,6 +4,8 @@
 	box-sizing: border-box;
 }
 
+
+
 body {
 	background: #F1F1F1;
 	display: flex;
@@ -52,4 +54,17 @@ main {
 
 .form-control:focus {
 	box-shadow: none;
+}
+
+/* index */
+.index-img {
+	object-fit: cover;
+	height: 240px;
+}
+
+/* detail */
+.detail-img {
+	object-fit: cover;
+	width: 100%;
+	height: 400px;
 }
