ステップ２まで

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,35 +1,68 @@
 {% extends "app/base.html" %}
 
 {% block content %}
+
 <div class="row my-4">
     <div class="col-md-8">
+        {% if keyword %}
+            <h4 class="mb-4">「{{ keyword }}」の検索結果</h4>
+        {% endif %}
         {% for post in post_data %}
-            <div class="card mb-4 index">
-                {% if post.image %}
-                    <img class="card-img-top index-img" src="{{ post.image.url }}" alt="">
-                {% endif %}
-                <div class="card-body">
-                    <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text">{{ post.content|truncatechars:100 }}</p>
-                    <div class="btn btn-warning">詳細</div>
-                </div>
-                <div class="card-footer text-muted">
-                    {{ post.created|date }} by {{ post.author }}
-                </div>
-                <a class="stretched-link" href="{% url 'post_detail' post.id %}"></a>
+        <div class="card mb-4 index">
+            {% if post.image %}
+            <img class="card-img-top index-img" src="{{ post.image.url }}" alt="">
+            {% endif %}
+            <div class="card-body">
+                <h2 class="card-title">{{ post.title }}<span class="small"> - {{ post.category }}</span></h2>
+                <p class="card-text">{{ post.content|truncatechars:100 }}</p>
+                <div class="btn btn-warning">詳細</div>
             </div>
+            <div class="card-footer text-muted">
+                {{ post.created|date }} by {{ post.author }}
+            </div>
+            <a class="stretched-link" href="{% url 'post_detail' post.id %}"></a>
+        </div>
         {% endfor %}
     </div>
 
     <div class="col-md-4">
         <div class="card">
-            <h5 class="card-header">このチュートリアルについて</h5>
+            <h5 class="card-header">このブログについて</h5>
             <div class="card-body">
                 <p>ステップ1</p>
                 <p class="mb-0">
-                    初めてDjangoを触る方向けのチュートリアルです。
-                    最小限の機能を構築してDjangoを学習しましょう。
+                    これは湯本健介の練習用ブログです。
+                    最小限の機能を構築してDjangoをマスターする。
                 </p>
+            </div>
+        </div>
+
+        <div class="card my-4">
+            <h5 class="card-header">検索</h5>
+            <div class="card-body">
+                <form method="get" action="{% url 'search' %}" class="input-group">
+                    <input type="text" class="form-control" name="keyword" placeholder="ブログを検索...">
+                    <button class="btn btn-warning ml-2" type="submit">検索</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="card my-4">
+            <h5 class="card-header">カテゴリ</h5>
+            <div class="card-body">
+                <div class="row">
+                    {% for category in category_data %}
+                        <div class="col-md-6">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a href="{% url 'category' category %}">
+                                        {{ category.name }}
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
