--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -68,3 +68,15 @@ main {
 	width: 100%;
 	height: 400px;
 }
+
+/* category */
+
+a {
+	color: black;
+}
+
+a:hover {
+	text-decoration: none;
+	color: orange;
+}
+
